included and implemented YoutubePlayerView, as well as fixed Movie.java to parse necessary information from the API in order to get youtube videos to load. target/compile SDK version also changed from 30 to 29 for the youtube loading to work properly

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -2,21 +2,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/PLAYER"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#252525"
     android:orientation="vertical"
     tools:context=".DetailActivity">
+
+    <com.google.android.youtube.player.YouTubePlayerView
+        android:id="@+id/player"
+        android:layout_width="match_parent"
+        android:layout_height="250dp" />
 
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView"
+        android:textColor="#C6C6C6"
         android:textSize="30sp"
+        android:textStyle="bold"
         tools:text="WonderWoman" />
 
     <RatingBar
         android:id="@+id/ratingBar"
+        style="@style/Widget.AppCompat.RatingBar.Indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:isIndicator="true"
@@ -28,5 +38,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView"
+        android:textColor="#FFFFFF"
         tools:text="sample data sample data sample data sample data sample data" />
 </LinearLayout>
